<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/update_time"
        android:layout_width="267dp"
        android:layout_height="73dp"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:scaleType="centerInside"
        android:text="@string/update_time"
        android:textColor="@color/textColor2"
        app:layout_constraintEnd_toStartOf="@+id/right_side"
        app:layout_constraintStart_toStartOf="@+id/left_side"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sending"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:scaleType="centerInside"
        android:text="@string/current_rate"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/right_side"
        app:layout_constraintStart_toStartOf="@+id/left_side"
        app:layout_constraintTop_toBottomOf="@+id/update_time" />


    <TextView
        android:id="@+id/taxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/taxes"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/result_halyk"
        app:layout_constraintBottom_toTopOf="@+id/update_button"
        app:layout_constraintEnd_toStartOf="@+id/number_to_send"
        app:layout_constraintStart_toStartOf="@+id/left_side"
        />

    <EditText
        android:id="@+id/number_to_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:text="@string/number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/update_button"
        app:layout_constraintEnd_toStartOf="@+id/right_side"
        app:layout_constraintStart_toEndOf="@+id/taxes"
        app:layout_constraintTop_toBottomOf="@+id/result_halyk"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/update_button"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update_button"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/right_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/left_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/result"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/number_to_send"
        app:layout_constraintEnd_toStartOf="@+id/right_side"
        app:layout_constraintStart_toStartOf="@+id/left_side"
        app:layout_constraintTop_toBottomOf="@+id/update_time" />

    <TextView
        android:id="@+id/result_halyk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/result_halyk"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/number_to_send"
        app:layout_constraintEnd_toStartOf="@+id/right_side"
        app:layout_constraintStart_toStartOf="@+id/left_side"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="₩"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/update_button"
        app:layout_constraintStart_toEndOf="@+id/number_to_send"
        app:layout_constraintTop_toBottomOf="@+id/result_halyk"
        app:layout_constraintVertical_bias="0.514" />

</android.support.constraint.ConstraintLayout>
